--- a/Intro-IA-1.ipynb
+++ b/Intro-IA-1.ipynb
@@ -11,13 +11,13 @@
     "# Introducción a la Inteligencia Artificial\n",
     "\n",
     "\n",
-    "<img src=\"images/Cartoon_Robot.svg.png\" width=200/>\n",
+    "<img src=\"images/Cartoon_Robot.svg.png\" width=\"200\"/>\n",
     "\n",
     "---\n",
     "Fernando Izco García  (fernando.izco.garcia@navarra.es)  \n",
     " Servicio de Avance Digital  \n",
     " Dirección General de Telecomunicaciones y Digitalización  \n",
-    "<img src=\"images/logo.gn.png\" width=300/>"
+    "<img src=\"images/logo.gn.png\" width=\"300\"/>"
    ]
   },
   {
