--- a/Intro-IA-1.ipynb
+++ b/Intro-IA-1.ipynb
@@ -71,10 +71,10 @@
     }
    },
    "source": [
-    "<img src=\"images/disclaimer.jpg\" style=\"width: 1200px;\"/>\n",
+    "<img src=\"images/disclaimer.jpg\" width=\"1200\"/>\n",
     "\n",
     "\n",
-    "<img src=\"images/cc.png\" style=\"width: 200px;\"/>"
+    "<img src=\"images/cc.png\" width=\"200\"/>"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "source": [
     "## Una nota acerca del entorno de esta presentación\n",
     "\n",
-    "<img src=\"images/tools.png\" style=\"width: 1200px;\"/>\n"
+    "<img src=\"images/tools.png\" width=\"1200\"/>\n"
    ]
   },
   {
@@ -939,7 +939,7 @@
     "\n",
     "Imagina que te sorprende la niebla en lo alto de una montaña.\n",
     "\n",
-    "<img src=\"images/fog.mountain.jpg\" style=\"width: 1000px;\"/>\n",
+    "<img src=\"images/fog.mountain.jpg\" width=\"1000\"/>\n",
     "\n"
    ]
   },
@@ -973,7 +973,7 @@
     "2. Un pequeño paso\n",
     "3. Repetir\n",
     "\n",
-    "<img src=\"images/gradient-descent.jpeg\" style=\"width: 800px;\"/>\n",
+    "<img src=\"images/gradient-descent.jpeg\" width=\"800\"/>\n",
     "\n",
     "Descenso de gradiente:\n",
     "1. Derivada de la función de pérdida con respecto a los parámetros\n",
@@ -1012,7 +1012,7 @@
    "source": [
     "## ¿Derivada?\n",
     "\n",
-    "<img src=\"images/newton-leibniz.png\" style=\"width: 1200px;\"/>\n"
+    "<img src=\"images/newton-leibniz.png\" width=\"1200\"/>\n"
    ]
   },
   {
@@ -1330,7 +1330,7 @@
     "Sólo nos falta calcular **LOS CINCO PARÁMETROS** que multiplican a las cuatro variables del modelo del profe\n",
     "* En realidad, tenemos **librerías**\n",
     "\n",
-    "<img src=\"images/sklearn.png\" style=\"width: 800px;\" align=\"middle\"/>\n",
+    "<img src=\"images/sklearn.png\" width=\"800\"/>\n",
     "\n",
     "https://scikit-learn.org/stable/\n"
    ]
@@ -1420,7 +1420,7 @@
    "source": [
     "### Finalmente, compara nuestro resultado con el de la publicación del profesor Ashenfelter:\n",
     "\n",
-    "<img src=\"images/coeficientes.articulo.comparados.png\" style=\"width: 1400px;\" align=\"middle\"/>\n",
+    "<img src=\"images/coeficientes.articulo.comparados.png\" width=\"1400\"/>\n",
     "\n"
    ]
   },
