--- a/Intro-IA-2.ipynb
+++ b/Intro-IA-2.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "|   Navegación para automóvil | Predicción del precio del vino |\n",
     "|-------------| -------------- |\n",
-    "| <img src=\"images/google-maps-navigation.png\" width=800/> | <img src=\"images/wines.priced.jpg\" width=800/> |\n"
+    "| <img src=\"images/google-maps-navigation.png\" width=\"800\"/> | <img src=\"images/wines.priced.jpg\" width=\"800\"/> |\n"
    ]
   },
   {
@@ -139,7 +139,7 @@
     "\n",
     "|   Navegación para automóvil | Predicción del precio del vino |\n",
     "|-------------| -------------- |\n",
-    "| <img src=\"images/google-maps-navigation.png\" width=400/> | <img src=\"images/wines.priced.jpg\" width=400/> |\n",
+    "| <img src=\"images/google-maps-navigation.png\" width=\"400\"/> | <img src=\"images/wines.priced.jpg\" width=\"400\"/> |\n",
     "\n",
     "### Programación tradicional vs aprendizaje máquina\n",
     "\n",
@@ -163,7 +163,7 @@
     "---\n",
     "\n",
     "\n",
-    "<img src=\"images/ferchiqui-color.png\" style=\"width: 1000px;\"/>"
+    "<img src=\"images/ferchiqui-color.png\" width=\"1000\"/>"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "\n",
     "| Predicción precio vino | Detección anomalías |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" style=\"width: 800px;\"/>|<img src=\"images/outlier.jpg\" style=\"width: 800px;\"/>|"
+    "|<img src=\"images/wines.priced.jpg\" width=\"800\"/>|<img src=\"images/outlier.jpg\" width=\"800\"/>|"
    ]
   },
   {
@@ -219,7 +219,7 @@
     "\n",
     "| Predicción precio vino | Detección anomalías |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" style=\"width: 500px;\"/>|<img src=\"images/outlier.jpg\" style=\"width: 500px;\"/>|\n",
+    "|<img src=\"images/wines.priced.jpg\" width=\"500\"/>|<img src=\"images/outlier.jpg\" width=\"500\"/>|\n",
     "\n",
     "Si los datos para el entrenamiento incluyen la solución, el objetivo (el precio del vino)\n",
     "* Aprendizaje máquina **supervisado**\n",
@@ -274,7 +274,7 @@
     "\n",
     "|  Predicción precio vino | Clasificación fotos animales   |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" width=800/>|<img src=\"images/imagenet-sample.png\" width=800/>|"
+    "|<img src=\"images/wines.priced.jpg\" width=\"800\"/>|<img src=\"images/imagenet-sample.png\" width=\"800\"/>|"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "\n",
     "|  Predicción precio vino | Clasificación fotos animales   |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" width=400/>|<img src=\"images/imagenet-sample.png\" width=400/>|\n",
+    "|<img src=\"images/wines.priced.jpg\" width=\"400\"/>|<img src=\"images/imagenet-sample.png\" width=\"400\"/>|\n",
     "\n",
     "### Regresión vs Clasificación\n",
     "* En un problema de **regresión** el resultado es un valor contínuo (un número, como el precio del vino)\n",
@@ -328,7 +328,7 @@
     "\n",
     "| Predicción precio vino | Localización objetos foto satélite |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" width=800/>|<img src=\"images/yolo1.png\" width=700/>|\n",
+    "|<img src=\"images/wines.priced.jpg\" width=\"800\"/>|<img src=\"images/yolo1.png\" width=\"700\"/>|\n",
     "\n"
    ]
   },
@@ -366,7 +366,7 @@
    "source": [
     "## This person does not exist \n",
     "\n",
-    "<img src=\"images/notexist.png\" style=\"width: 1200px;\"/>\n",
+    "<img src=\"images/notexist.png\" width=\"1200\"/>\n",
     "\n",
     "https://www.thispersondoesnotexist.com/\n"
    ]
@@ -414,7 +414,7 @@
    "source": [
     "## Diagnóstico de retinopatía vs Filtro de spam vs Detección de transacciones bancarias fraudulentas\n",
     "\n",
-    "<img src=\"images/formatos.png\" style=\"width: 3000px;\"/>"
+    "<img src=\"images/formatos.png\" width=\"3000\"/>"
    ]
   },
   {
@@ -427,7 +427,7 @@
    "source": [
     "## Imagen digital vs Proceso de lenguaje natural vs Datos tabulares\n",
     "\n",
-    "<img src=\"images/formatos.png\" style=\"width: 1500px;\"/>\n",
+    "<img src=\"images/formatos.png\" width=\"1500\"/>\n",
     "\n",
     "Los tres son problemas de **clasificación**, se diferencian en el tipo de datos de entrada\n",
     "* Clasificar retinografías entre sanas o con retinopatía\n",
@@ -493,7 +493,7 @@
     "\n",
     "|Aprendizaje máquina|Aprendizaje (máquina) profundo|\n",
     "| -------------|--------------|\n",
-    "|$\\hat y = \\alpha_0 + \\alpha_1 \\cdot  x_1 + \\alpha_2 \\cdot x_2 + \\cdot\\cdot\\cdot + \\alpha_n \\cdot  x_n$|<img src=\"images/nn.png\" width=600>|"
+    "|$\\hat y = \\alpha_0 + \\alpha_1 \\cdot  x_1 + \\alpha_2 \\cdot x_2 + \\cdot\\cdot\\cdot + \\alpha_n \\cdot  x_n$|<img src=\"images/nn.png\" width=\"400\">|"
    ]
   },
   {
@@ -556,7 +556,7 @@
     "* Determinados problemas se resuelven mejor con determinados modelos\n",
     "* Para elegir: experiencias previas y experimentación\n",
     "* Las redes neuronales se usan ya para casi todo\n",
-    "    <img src=\"images/navaja.jpg\" style=\"width: 400px;\"/>\n",
+    "    <img src=\"images/navaja.jpg\" width=\"400\"/>\n",
     "    "
    ]
   },
@@ -591,7 +591,7 @@
     "1. ¿Es aprendizaje máquina?\n",
     "1. ¿Es aprendizaje profundo?\n",
     "\n",
-    "<img src=\"images/DeepBlue.png\" width = 1400px/>"
+    "<img src=\"images/DeepBlue.png\" width = \"1400\"/>"
    ]
   },
   {
@@ -625,7 +625,7 @@
     "\n",
     "1. ¿Es aprendizaje supervisado o no supervisado?\n",
     "\n",
-    "<img src=\"images/clustering.png\" style=\"width: 1200px;\"/>\n"
+    "<img src=\"images/clustering.png\" width=\"1200\"/>\n"
    ]
   },
   {
@@ -638,7 +638,7 @@
    "source": [
     "## Segmentación (*'clustering'*)\n",
     "\n",
-    "<img src=\"images/clustering.png\" style=\"width: 600px;\"/>\n",
+    "<img src=\"images/clustering.png\" width=\"600\"/>\n",
     "\n",
     "Es aprendizaje máquina **no supervisado**\n",
     "* Los datos de entrenamiento no incluyen el objetivo\n",
@@ -676,7 +676,7 @@
     "1. ¿En cuanto al tipo de datos?\n",
     "1. ¿Es aprendizaje profundo?\n",
     "\n",
-    "<img src=\"images/vision-artificial.jpg\" style=\"width: 800px;\"/>\n",
+    "<img src=\"images/vision-artificial.jpg\" width=\"800\"/>\n",
     "\n",
     "\n"
    ]
@@ -691,7 +691,7 @@
    "source": [
     "## Identificación de piezas defectuosas\n",
     "\n",
-    "<img src=\"images/vision-artificial.jpg\" style=\"width: 400px;\"/>\n",
+    "<img src=\"images/vision-artificial.jpg\" width=\"400\"/>\n",
     "\n",
     "1. Es aprendizaje máquina\n",
     "1. Supervisado\n",
@@ -727,7 +727,7 @@
    "source": [
     "##  Detección de objetos en tiempo real\n",
     "\n",
-    "<img src=\"images/yolo.gif\" style=\"width: 500px;\"/>\n",
+    "<img src=\"images/yolo.gif\" width=\"500\"/>\n",
     "\n",
     "* Es **regresión** (la salida incluye las coordenadas de las localizaciones)\n",
     "* Pero es **también clasificación**, porque la salida incluye una etiqueta, una clase de objeto (persona, motocicleta, camión)"
@@ -745,7 +745,7 @@
     "\n",
     "1. ¿Es aprendizaje supervisado o no supervisado?\n",
     "\n",
-    "<img src=\"images/kaggle-netflix.png\" style=\"width: 800px;\"/>\n",
+    "<img src=\"images/kaggle-netflix.png\" width=\"800\"/>\n",
     "\n"
    ]
   },
@@ -776,7 +776,7 @@
     "\n",
     "1. ¿Es aprendizaje supervisado o no supervisado?\n",
     "\n",
-    "<img src=\"images/translator.png\" style=\"width: 1000px;\"/>\n"
+    "<img src=\"images/translator.png\" width=\"1000\"/>\n"
    ]
   },
   {
@@ -789,7 +789,7 @@
    "source": [
     "## Traducción entre idiomas\n",
     "\n",
-    "<img src=\"images/translator.png\" style=\"width: 500px;\"/>\n",
+    "<img src=\"images/translator.png\" width=\"500\"/>\n",
     "\n",
     "Es aprendizaje supervisado: se entrenan con grandes cantidades de textos traducidos.\n",
     "\n",
@@ -811,7 +811,7 @@
     "\n",
     "1. ¿Es aprendizaje supervisado o no supervisado?\n",
     "\n",
-    "<img src=\"images/enlazado.registros.png\" style=\"width: 800px;\"/>\n"
+    "<img src=\"images/enlazado.registros.png\" width=\"800\"/>\n"
    ]
   },
   {
@@ -841,9 +841,20 @@
     "\n",
     "1. ¿Es un problema de  clasificación?\n",
     "\n",
-    "![](images/image-segmentation.png)\n",
+    "<img src=\"images/image-segmentation.png\" width=\"800\"/>\n",
     "\n",
-    "![](images/medical-segmentation.jpeg)\n"
+    "<img src=\"images/medical-segmentation.jpeg\" width=\"300\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "La segmentación de imagen es un problema de clasificación llevado al extremo: los ejemplos son imágenes con **cada pixel clasificado**"
    ]
   },
   {
@@ -857,7 +868,7 @@
     "## Coloreado de imágenes en blanco y negro\n",
     "\n",
     "\"Migrant Mother\" by Dorothea Lange (1936)\n",
-    "![DeOldify](https://camo.githubusercontent.com/cf0b5cd16cd934cba884172370a78b40b28db00a/68747470733a2f2f692e696d6775722e636f6d2f427430766e6b652e6a7067 \"Logo Title Text 1\")\n",
+    "<img src=\"https://camo.githubusercontent.com/cf0b5cd16cd934cba884172370a78b40b28db00a/68747470733a2f2f692e696d6775722e636f6d2f427430766e6b652e6a7067\" width=\"1000\"/>\n",
     "\n",
     "https://github.com/jantic/DeOldify"
    ]
@@ -887,7 +898,7 @@
     "\n",
     "| Original    |   Coloreada por https://github.com/jantic/DeOldify |\n",
     "| - | - |\n",
-    "|<img src=\"images/ferchiqui-bn.png\" width=500/>| |<img src=\"images/ferchiqui-color.png\" width=500/>|\n"
+    "|<img src=\"images/ferchiqui-bn.png\" width=\"500\"/>| |<img src=\"images/ferchiqui-color.png\" width=\"500\"/>|\n"
    ]
   },
   {
