--- a/Intro-IA-2.ipynb
+++ b/Intro-IA-2.ipynb
@@ -344,7 +344,7 @@
     "\n",
     "| Predicción precio vino | Localización objetos foto satélite |\n",
     "| -------------|--------------|\n",
-    "|<img src=\"images/wines.priced.jpg\" width=300/>|<img src=\"images/yolo1.png\" width=300/>|\n",
+    "|<img src=\"images/wines.priced.jpg\" width=\"300\"/>|<img src=\"images/yolo1.png\" width=\"300\"/>|\n",
     "\n",
     "\n",
     "Los dos son problemas de **Regresión**\n",
@@ -591,7 +591,7 @@
     "1. ¿Es aprendizaje máquina?\n",
     "1. ¿Es aprendizaje profundo?\n",
     "\n",
-    "<img src=\"images/DeepBlue.png\" width = \"1400\"/>"
+    "<img src=\"images/DeepBlue.png\" width=\"1400\"/>"
    ]
   },
   {
@@ -604,7 +604,7 @@
    "source": [
     "## Ajedrez, 1996\n",
     "\n",
-    "<img src=\"images/DeepBlue.png\" width = 700px/>\n",
+    "<img src=\"images/DeepBlue.png\" width =\"700\"/>\n",
     "\n",
     "Deep blue es **programación tradicional**\n",
     "* Búsqueda en árbol (fuerza bruta)\n",
@@ -896,9 +896,9 @@
     "\n",
     "Podéis colorear vuestras propias fotos, si aprendéis a usar un cuaderno *Jupyter*\n",
     "\n",
-    "| Original    |   Coloreada por https://github.com/jantic/DeOldify |\n",
+    "| Original|Coloreada por https://github.com/jantic/DeOldify |\n",
     "| - | - |\n",
-    "|<img src=\"images/ferchiqui-bn.png\" width=\"500\"/>| |<img src=\"images/ferchiqui-color.png\" width=\"500\"/>|\n"
+    "|<img src=\"images/ferchiqui-bn.png\" width=\"500\"/>|<img src=\"images/ferchiqui-color.png\" width=\"500\"/>|\n"
    ]
   },
   {
