--- a/Intro-IA-5.ipynb
+++ b/Intro-IA-5.ipynb
@@ -313,6 +313,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "das-nano desarrolla una excelente tecnología que reconoce personas aunque se pongan gafas o gorro, o se dejen barba, lo cual es perfecto para un sistema de control de acceso. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -330,7 +341,7 @@
     }
    },
    "source": [
-    "* Técnicas de **reconocimiento facial avanzadas** (como las de das-Nano) que siguen reconociendo a una persona si lleva gafas o se deja barba o se pone una gorra, pueden ser usadas por **gobiernos no democráticos** para identificar a opositores\n"
+    "Estas técnicas de **reconocimiento facial avanzadas**, pueden ser usadas por **gobiernos no democráticos** para identificar a opositores que se ocultan al manifestarse"
    ]
   },
   {
