--- a/Intro-IA-3.ipynb
+++ b/Intro-IA-3.ipynb
@@ -31,12 +31,16 @@
     "# Introducción a la Inteligencia Artificial\n",
     "\n",
     "1. Primera parte\n",
-    "    1. Un ejemplo como introducción\n",
-    "    1. Definición y Casos de uso\n",
+    "    1. [Un ejemplo como introducción](Intro-IA-1.ipynb)\n",
+    "    1. [Definición y casos de uso](Intro-IA-2.ipynb)\n",
     "1. Segunda parte\n",
     "    1. **Claves del aprendizaje supervisado**\n",
-    "    1. Claves del aprendizaje profundo\n",
-    "    1. Ética e IA"
+    "    1. [Claves del aprendizaje profundo](Intro-IA-4.ipynb)\n",
+    "    1. [Ética e IA](Intro-IA-5.ipynb)\n",
+    "\n",
+    "\n",
+    "[<img src=\"images/youtube.png\" width=\"30\"  align=\"left\"/>](https://youtu.be/EM1jmJvsLak)\n",
+    "[Video de este capítulo en YouTube](https://youtu.be/EM1jmJvsLak)"
    ]
   },
   {
@@ -994,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "nbpresent": {
    "slides": {
