--- a/Intro-IA-1.ipynb
+++ b/Intro-IA-1.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "[<img src=\"images/youtube.png\" width=\"30\"  align=\"left\"/>](https://youtu.be/SYFrgoForwo)\n",
     "\n",
-    "[Video de este capítulo en YouTube](https://youtu.be/SYFrgoForwo)\n"
+    "[Video de este capítulo en YouTube](https://youtu.be/pJqLfhyF30I)\n"
    ]
   },
   {
